--- a/OPENCL/CMakeLists.txt
+++ b/OPENCL/CMakeLists.txt
@@ -1,18 +1,22 @@
 PROJECT(Test)
 #Required in DGtal
+
+
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 FIND_PACKAGE(DGtal REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
-FIND_PACKAGE (OPENCL REQUIRED)
 
 
 INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
-include_directories(${Boost_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
+INCLUDE_DIRECTORIES(/System/Library/Frameworks)
+FIND_LIBRARY(OPENCL_LIBRARY OpenCL)
+MARK_AS_ADVANCED(OPENCL_LIBRARY)
+SET(EXTRA_LIB ${OPENCL_LIBRARY})
 
 LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
 LINK_DIRECTORIES(${OPENCL_LIBRARY_DIRS})
 
-ADD_EXECUTABLE(main main)
-TARGET_LINK_LIBRARIES(main ${DGTAL_LIBRARIES})
+ADD_EXECUTABLE(hello hello)
+TARGET_LINK_LIBRARIES(hello ${EXTRA_LIB})
