--- a/TestDSL/CMakeLists.txt
+++ b/TestDSL/CMakeLists.txt
@@ -6,8 +6,15 @@ FIND_PACKAGE(Boost REQUIRED)
 
 
 INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
-include_directories(${Boost_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+
+INCLUDE_DIRECTORIES(/System/Library/Frameworks)
+FIND_LIBRARY(OPENCL_LIBRARY OpenCL)
+MARK_AS_ADVANCED(OPENCL_LIBRARY)
+SET(EXTRA_LIB ${DGTAL_LIBRARIES} ${OPENCL_LIBRARY})
 
 LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
+LINK_DIRECTORIES(${OPENCL_LIBRARY_DIRS})
+
 ADD_EXECUTABLE(TestDSL TestDSL)
-TARGET_LINK_LIBRARIES(TestDSL ${DGTAL_LIBRARIES})
+TARGET_LINK_LIBRARIES(TestDSL ${EXTRA_LIB})
